bug fixes for item description width scrollbar, and numeric directive not passing changes to form control

--- a/src/app/item/item-description/item-description.component.css
+++ b/src/app/item/item-description/item-description.component.css
@@ -17,3 +17,7 @@
   padding-right: 15px;
   padding-left: 8px;
 }
+
+::ng-deep .mat-dialog-content {
+  overflow-x: hidden;
+}
